force-app/main/default/objects/Account/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Advisor for program.</description>
    <inlineHelpText>Advisor for program.</inlineHelpText>
    <label>Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>