force-app/main/default/objects/Account/fields/Catalog_URL__c.field-meta.xml
<CustomField>
    <fullName>Catalog_URL__c</fullName>
    <description>https://catalog.colostate.edu/general-catalog/programsaz/ program.</description>
    <inlineHelpText>https://catalog.colostate.edu/general-catalog/programsaz/ program.</inlineHelpText>
    <label>Catalog URL</label>
    <type>Url</type>
</CustomField>