force-app/main/default/objects/Account/fields/CSU_Online_Program__c.field-meta.xml
<CustomField>
    <fullName>CSU_Online_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to designate programs supported by the CSU Online team.</inlineHelpText>
    <label>CSU Online Program</label>
    <type>Checkbox</type>
</CustomField>