force-app/main/default/objects/Account/fields/Fall_Application_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Fall_Application_Deadline__c</fullName>
    <description>Application deadline for Fall term</description>
    <inlineHelpText>Application deadline for Fall term</inlineHelpText>
    <label>Fall Application Deadline</label>
    <type>Date</type>
</CustomField>