force-app/main/default/objects/Account/fields/Hand_Off_Program__c.field-meta.xml
<CustomField>
    <fullName>Hand_Off_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hand Off Program</label>
    <type>Checkbox</type>
</CustomField>