force-app/main/default/objects/Account/fields/Program_Cost__c.field-meta.xml
<CustomField>
    <fullName>Program_Cost__c</fullName>
    <label>Program Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>