force-app/main/default/objects/Account/fields/Program_Friendly_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Friendly_Name__c</fullName>
    <description>The friendly name of an academic program, for use in merge fields with the &apos;Title Prefix&apos;.</description>
    <inlineHelpText>The friendly name of an academic program, for use in merge fields with the &apos;Title Prefix&apos;.</inlineHelpText>
    <label>Program Friendly Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>