force-app/main/default/objects/Account/fields/Program_Level__c.field-meta.xml
<CustomField>
    <fullName>Program_Level__c</fullName>
    <description>The level of an academic program.</description>
    <inlineHelpText>The level of an academic program.</inlineHelpText>
    <label>Program Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Program_Level</valueSetName>
    </valueSet>
</CustomField>