force-app/main/default/objects/Account/fields/Program_Title_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Program_Title_Prefix__c</fullName>
    <description>The friendly name of an academic program, for use in merge fields with the &apos;Program Friendly Name&apos;.</description>
    <inlineHelpText>The friendly name of an academic program, for use in merge fields with the &apos;Program Friendly Name&apos;.</inlineHelpText>
    <label>Program Title Prefix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>