force-app/main/default/objects/Account/fields/Spring_Application_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Spring_Application_Deadline__c</fullName>
    <description>Application deadline for Spring term</description>
    <inlineHelpText>Application deadline for Spring term</inlineHelpText>
    <label>Spring Application Deadline</label>
    <type>Date</type>
</CustomField>