force-app/main/default/objects/Account/fields/Subject_Area__c.field-meta.xml
<CustomField>
    <fullName>Subject_Area__c</fullName>
    <description>Interest area of the academic program or program offering.</description>
    <label>Subject Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agricultural Sciences</fullName>
            </value>
            <value>
                <fullName>Arts and Music</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Computer Science</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Health and Human Sciences</fullName>
            </value>
            <value>
                <fullName>Leadership/Management</fullName>
            </value>
            <value>
                <fullName>Natural Resources and Environment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>