force-app/main/default/objects/Account/fields/Summer_Application_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Summer_Application_Deadline__c</fullName>
    <description>Application deadline for Summer term</description>
    <inlineHelpText>Application deadline for Summer term</inlineHelpText>
    <label>Summer Application Deadline</label>
    <type>Date</type>
</CustomField>