force-app/main/default/objects/Account/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of academic program.</description>
    <inlineHelpText>The type of academic program.</inlineHelpText>
    <label>Degree Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Degree_Type</valueSetName>
    </valueSet>
</CustomField>