force-app/main/default/objects/Account/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <description>The unit type of an academic program.</description>
    <inlineHelpText>The unit type of an academic program.</inlineHelpText>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Type__gvs</valueSetName>
    </valueSet>
</CustomField>