force-app/main/default/objects/Account/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <description>Number of academic (credit hours) or non-credit units (CEUs, PDUs, etc.).</description>
    <label>Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>